<resources>
    <string name="app_name">Sapir\'s app</string>
    <string name ="created_by">Created by Sapir Abuksis</string>
    <string name="type_of_training">Type of training</string>
    <string-array name="name_activity">
        <item>Hands</item>
        <item>Shoulders</item>
        <item>Back</item>
        <item>Chest</item>
        <item>Legs</item>
    </string-array>
    <string name="sort_of_training">Sort of training</string>
    <string name="aerobic">Aerobic</string>
    <string name="anaerobic">Anaerobic</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="number_of_reps">Number of reps</string>
    <string name="training_with">Training with</string>
    <string name="training_with_coach">Coach</string>
    <string name="training_with_partner">Partner</string>
    <string name="space_luc">Space Luc</string>
</resources>
