<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sapirsapp.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:id="@+id/type_of_training"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/type_of_training"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <Spinner
        android:id="@+id/spinner_activity"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/sort_of_training"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/sort_of_training"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <RadioGroup android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:gravity="center">

        <RadioButton android:id="@+id/radio_aerobic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aerobic"
            android:onClick="checkButton"
            android:checked="true"/>

        <RadioButton android:id="@+id/radio_anaerobic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anaerobic"
            android:onClick="checkButton"/>
    </RadioGroup>

    <TextView android:id="@+id/nubmer_of_sets"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/number_of_sets"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/number_of_sets_text"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_above="@id/setsProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="0"
        android:textSize="30sp"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/setsProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/setsSeekBar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp" />

    <SeekBar
        android:id="@+id/setsSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <TextView android:id="@+id/nubmer_of_reps"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/number_of_reps"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/number_of_reps_text"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_above="@id/repsProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="0"
        android:textSize="30sp"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/repsProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/setsSeekBar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp" />

    <SeekBar
        android:id="@+id/repsSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <TextView android:id="@+id/space_luc"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/space_luc"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <RatingBar android:id="@+id/ratingBar_space_luc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:numStars="5" />


</LinearLayout>
